# migraine

./: README.md  migraine.py  pyproject.toml
tests/: test_calculate_migration_strategy.py
