[tool.poetry]
name = "migraine"
version = "0.1.0"
description = "Implementation of automated semantic versioning-based Mongo migration flow for Python"
authors = ["hacksparr0w <hacksparr0w@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
motor = "^3.3.0"
semver = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.5.1"
motor-types = "^1.0.0b3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
